brat/test/golden/kernel/deleteFst.brat.golden
Error in test/golden/kernel/deleteFst.brat on line 2:
deleteFst = { q0, q1 => q1 }
            ^^^^^^^^^^^^^^^^

  Type error: Variable(s) q0 haven't been used

